# vehicleSim

./: CMakeLists.txt  README.md
include/: FilePublisher.h  KafkaPublisher.h  Route.h  Simulation.h  Vehicle.h
src/: FilePublisher.cpp  KafkaPublisher.cpp  main.cpp
